--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
     <version>4.51</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>com.cloudbees.jenkins.plugins</groupId>
@@ -24,34 +24,23 @@
     </license>
   </licenses>
 
-  <developers>
-    <developer>
-      <id>recampbell</id>
-      <name>Ryan Campbell</name>
-      <email>ryan.campbell@gmail.com</email>
-    </developer>
-    <developer>
-      <name>Oleg Nenashev</name>
-      <id>oleg_nenashev</id>
-      <email>o.v.nenashev@gmail.com</email>
-    </developer>
-  </developers>
-
   <scm>
-    <connection>scm:git:git://github.com/jenkinsci/custom-tools-plugin.git</connection>
+    <connection>scm:git:https://github.com/jenkinsci/custom-tools-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/custom-tools-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/custom-tools-plugin</url>
     <tag>HEAD</tag>
   </scm>
 
   <properties>
-    <jenkins.version>2.346.3</jenkins.version>
+    <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
+    <jenkins.baseline>2.346</jenkins.baseline>
+    <jenkins.version>${jenkins.baseline}.3</jenkins.version>
   </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.346.x</artifactId>
+        <artifactId>bom-${jenkins.baseline}.x</artifactId>
         <version>1763.v092b_8980a_f5e</version>
         <type>pom</type>
         <scope>import</scope>
